--- a/config.toml
+++ b/config.toml
@@ -1,76 +1,201 @@
 baseURL = ""
 title = "Daniel Ullrich"
 theme = "somrat"
+# post pagination
+paginate = "6"
+# post excerpt
+summaryLength = "10"
+# disable language
+disableLanguages = [] # disable language from here
+# google analutics
+googleAnalytics = "" # example : UA-123-45
+# disqus short name
+disqusShortname = "" # get your shortname form here : https://disqus.com
 
-# Theme configuration
+
+############################# Outputs ##############################
+[outputs]
+home = ["HTML"]
+
+[markup.goldmark.renderer]
+unsafe= true
+
+############################# Plugins ##############################
+
+# CSS Plugins
+[[params.plugins.css]]
+link = "plugins/bootstrap/bootstrap.min.css"
+[[params.plugins.css]]
+link = "https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
+[[params.plugins.css]]
+link = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+[[params.plugins.css]]
+link = "plugins/hover/hover.css"
+[[params.plugins.css]]
+link = "plugins/magnific-popup/magnific-popup.css"
+[[params.plugins.css]]
+link = "plugins/owl-carousel/owl.carousel.min.css"
+[[params.plugins.css]]
+link = "plugins/owl-carousel/owl.theme.default.min.css"
+[[params.plugins.css]]
+link = "plugins/text-animation/text-animation.css"
+
+# JS Plugins
+[[params.plugins.js]]
+link = "plugins/jQuery/jquery.min.js"
+[[params.plugins.js]]
+link = "plugins/bootstrap/bootstrap.min.js"
+[[params.plugins.js]]
+link = "plugins/wow.min.js"
+[[params.plugins.js]]
+link = "plugins/text-animation/text-animation.js"
+[[params.plugins.js]]
+link = "plugins/jquery.waypoints.min.js"
+[[params.plugins.js]]
+link = "plugins/shuffle/shuffle.min.js"
+[[params.plugins.js]]
+link = "plugins/magnific-popup/jquery.magnific-popup.min.js"
+[[params.plugins.js]]
+link = "plugins/owl-carousel/owl.carousel.min.js"
+
+
+#################### default parameters ################################
 [params]
-env = "production"
-author = "<author>"
-description = "Portfolio description"
-keywords = ["Portfolio"]
-disableThemeToggle = false
-ShowReadingTime = false
-ShowShareButtons = false
-ShowPostNavLinks = false
-ShowBreadCrumbs = false
-ShowCodeCopyButtons = true
-disableScrollToTop = true
+favicon = "images/favicon.png"
+logo_light = "images/logo.png"
+logo_dark = "images/logo-dark.png"
+logo_width = "150px"
+# Meta data
+description = "This is meta description"
+author = "somrat"
 
-[params.label]
-text = "Home"
-icon = "/profile.png"
-iconHeight = 24
+# Preloader
+[params.preloader]
+enable = true
+preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 
-[params.profileMode]
-enabled = true
-title = "Daniel Ullrich"
-subtitle = "I am a Person"
-imageUrl = "profile.png"
-imageWidth = 120
-imageHeight = 120
+############################# social site ########################
+[[params.social]]
+icon = "fab fa-facebook-f"
+link = "https://www.facebook.com/somratpro"
 
-[[params.profileMode.buttons]]
-name = "tags"
-url = "/tags/"
+[[params.social]]
+icon = "fab fa-twitter"
+link = "https://twitter.com/somratpro"
 
-[[params.profileMode.buttons]]
-name = "puppies"
-url = "https://google.com/search?tbm=isch&q=puppies"
+[[params.social]]
+icon = "fab fa-instagram"
+link = "https://www.instagram.com/somratpro"
 
-[[params.socialIcons]]
-name = "twitter"
-url = "https://twitter.com/"
+[[params.social]]
+icon = "fab fa-github"
+link = "https://github.com/somratpro"
 
-[[params.socialIcons]]
-name = "instagram"
-url = "https://instagram.com/"
+[[params.social]]
+icon = "fab fa-linkedin"
+link = "https://www.linkedin.com/in/somratpro"
 
-[[params.socialIcons]]
-name = "stackoverflow"
-url = "https://stackoverflow.com"
 
-[[params.socialIcons]]
-name = "github"
-url = "https://github.com/"
+################################### English language #####################################
+[Languages.en]
+languageName = "En"
+languageCode = "en-us"
+contentDir = "content/english"
+weight = 1
+home = "Home"
+# copyright
+copyright = "Copyright &copy; 2020 a hugo theme by [somrat](https://somrat.netlify.com)"
 
-[[params.socialIcons]]
-name = "gitlab"
-url = "https://gitlab.com/"
 
-[[menu.main]]
-identifier = "blog"
-name = "blog"
-url = "/blog/"
-weight = 10
+################# english navigation ##################
 
-[[menu.main]]
-identifier = "projects"
-name = "projects"
-url = "/projects/"
-weight = 20
+# main menu
+[[Languages.en.menu.main]]
+name = "Home"
+url = "/"
+weight = 1
 
-[[menu.main]]
-identifier = "link"
-name = "A link"
-url = "https://google.com/search?tbm=isch&q=cute%20puppies"
-weight = 30
+[[Languages.en.menu.main]]
+name = "About me"
+pre = "#"
+url = "about"
+weight = 2
+
+[[Languages.en.menu.main]]
+name = "Service"
+pre = "#"
+url = "service"
+weight = 3
+
+[[Languages.en.menu.main]]
+name = "Portfolio"
+pre = "#"
+url = "portfolio"
+weight = 4
+
+[[Languages.en.menu.main]]
+name = "Testimonial"
+pre = "#"
+url = "testimonial"
+weight = 5
+
+[[Languages.en.menu.main]]
+name = "Contact"
+pre = "#"
+url = "contact"
+weight = 6
+
+[[Languages.en.menu.main]]
+name = "Blog"
+url = "blog"
+weight = 7
+
+
+################################### French language #####################################
+[Languages.fr]
+languageName = "Fr"
+languageCode = "fr-fr"
+contentDir = "content/french"
+weight = 2
+home = "Accueil"
+# copyright
+copyright = "Copyright &copy; 2020 a hugo theme by [somrat](https://somrat.netlify.com)"
+
+
+################# english navigation ##################
+
+# main menu
+[[Languages.fr.menu.main]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[Languages.fr.menu.main]]
+name = "About me"
+pre = "#"
+url = "about"
+weight = 2
+
+[[Languages.fr.menu.main]]
+name = "Service"
+pre = "#"
+url = "service"
+weight = 3
+
+[[Languages.fr.menu.main]]
+name = "Portfolio"
+pre = "#"
+url = "portfolio"
+weight = 4
+
+[[Languages.fr.menu.main]]
+name = "Testimonial"
+pre = "#"
+url = "testimonial"
+weight = 5
+
+[[Languages.fr.menu.main]]
+name = "Contact"
+pre = "#"
+url = "contact"
+weight = 6
