--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "somrat"]
-	path = themes/somrat
-	url = https://github.com/somratpro/somrat.git
+[submodule "themes/roxo-hugo"]
+	path = themes/roxo-hugo
+	url = git@github.com:StaticMania/roxo-hugo.git
