--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ paginate = "6"
 # post excerpt
 summaryLength = "10"
 # disable language
-disableLanguages = [] # disable language from here
+disableLanguages = ["fr"] # disable language from here
 # google analutics
 googleAnalytics = "" # example : UA-123-45
 # disqus short name
@@ -76,17 +76,6 @@ enable = true
 preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 
 ############################# social site ########################
-[[params.social]]
-icon = "fab fa-facebook-f"
-link = "https://www.facebook.com/somratpro"
-
-[[params.social]]
-icon = "fab fa-twitter"
-link = "https://twitter.com/somratpro"
-
-[[params.social]]
-icon = "fab fa-instagram"
-link = "https://www.instagram.com/somratpro"
 
 [[params.social]]
 icon = "fab fa-github"
@@ -95,6 +84,17 @@ link = "https://github.com/somratpro"
 [[params.social]]
 icon = "fab fa-linkedin"
 link = "https://www.linkedin.com/in/somratpro"
+# [[params.social]]
+# icon = "fab fa-facebook-f"
+# link = "https://www.facebook.com/somratpro"
+#
+# [[params.social]]
+# icon = "fab fa-twitter"
+# link = "https://twitter.com/somratpro"
+#
+# [[params.social]]
+# icon = "fab fa-instagram"
+# link = "https://www.instagram.com/somratpro"
 
 
 ################################### English language #####################################
@@ -122,11 +122,11 @@ pre = "#"
 url = "about"
 weight = 2
 
-[[Languages.en.menu.main]]
-name = "Service"
-pre = "#"
-url = "service"
-weight = 3
+# [[Languages.en.menu.main]]
+# name = "Service"
+# pre = "#"
+# url = "service"
+# weight = 3
 
 [[Languages.en.menu.main]]
 name = "Portfolio"
@@ -134,11 +134,11 @@ pre = "#"
 url = "portfolio"
 weight = 4
 
-[[Languages.en.menu.main]]
-name = "Testimonial"
-pre = "#"
-url = "testimonial"
-weight = 5
+# [[Languages.en.menu.main]]
+# name = "Testimonial"
+# pre = "#"
+# url = "testimonial"
+# weight = 5
 
 [[Languages.en.menu.main]]
 name = "Contact"
@@ -146,10 +146,10 @@ pre = "#"
 url = "contact"
 weight = 6
 
-[[Languages.en.menu.main]]
-name = "Blog"
-url = "blog"
-weight = 7
+# [[Languages.en.menu.main]]
+# name = "Blog"
+# url = "blog"
+# weight = 7
 
 
 ################################### French language #####################################
