--- a/config.toml
+++ b/config.toml
@@ -146,10 +146,10 @@ pre = "#"
 url = "contact"
 weight = 6
 
-# [[Languages.en.menu.main]]
-# name = "Blog"
-# url = "blog"
-# weight = 7
+[[Languages.en.menu.main]]
+name = "Projects"
+url = "projects"
+weight = 7
 
 
 ################################### French language #####################################
